# internal/server/authn/authn_method.go
@@ -52,7 +52,8 @@ func Login(
 	// login authentication was successful, create an access key for the user
 
 	accessKey := &models.AccessKey{
-		IssuedFor:           authenticated.Identity.ID,
+		IssuedForID:         authenticated.Identity.ID,
+		IssuedForKind:       models.AccessKeyForKindUser,
 		IssuedForName:       authenticated.Identity.Name,
 		ProviderID:          authenticated.Provider.ID,
 		ExpiresAt:           authenticated.SessionExpiry,
