# internal/server/data/access_key.go
@@ -3,12 +3,10 @@ package data
 import (
 	"crypto/sha256"
 	"crypto/subtle"
-	"errors"
 	"fmt"
 	"strings"
 	"time"
 
-	"github.com/infrahq/infra/internal"
 	"github.com/infrahq/infra/internal/generate"
 	"github.com/infrahq/infra/internal/logging"
 	"github.com/infrahq/infra/internal/server/data/querybuilder"
@@ -23,15 +21,15 @@ func (a accessKeyTable) Table() string {
 }
 
 func (a accessKeyTable) Columns() []string {
-	return []string{"created_at", "deleted_at", "expires_at", "inactivity_extension", "inactivity_timeout", "id", "issued_for", "key_id", "name", "organization_id", "provider_id", "scopes", "secret_checksum", "updated_at"}
+	return []string{"created_at", "deleted_at", "expires_at", "inactivity_extension", "inactivity_timeout", "id", "issued_for_id", "issued_for_kind", "key_id", "name", "organization_id", "provider_id", "scopes", "secret_checksum", "updated_at"}
 }
 
 func (a accessKeyTable) Values() []any {
-	return []any{a.CreatedAt, a.DeletedAt, a.ExpiresAt, a.InactivityExtension, a.InactivityTimeout, a.ID, a.IssuedFor, a.KeyID, a.Name, a.OrganizationID, a.ProviderID, a.Scopes, a.SecretChecksum, a.UpdatedAt}
+	return []any{a.CreatedAt, a.DeletedAt, a.ExpiresAt, a.InactivityExtension, a.InactivityTimeout, a.ID, a.IssuedForID, a.IssuedForKind, a.KeyID, a.Name, a.OrganizationID, a.ProviderID, a.Scopes, a.SecretChecksum, a.UpdatedAt}
 }
 
 func (a *accessKeyTable) ScanFields() []any {
-	return []any{&a.CreatedAt, &a.DeletedAt, &a.ExpiresAt, &a.InactivityExtension, &a.InactivityTimeout, &a.ID, &a.IssuedFor, &a.KeyID, &a.Name, &a.OrganizationID, &a.ProviderID, &a.Scopes, &a.SecretChecksum, &a.UpdatedAt}
+	return []any{&a.CreatedAt, &a.DeletedAt, &a.ExpiresAt, &a.InactivityExtension, &a.InactivityTimeout, &a.ID, &a.IssuedForID, &a.IssuedForKind, &a.KeyID, &a.Name, &a.OrganizationID, &a.ProviderID, &a.Scopes, &a.SecretChecksum, &a.UpdatedAt}
 }
 
 var (
@@ -46,7 +44,7 @@ func secretChecksum(secret string) []byte {
 
 func validateAccessKey(accessKey *models.AccessKey) error {
 	switch {
-	case accessKey.IssuedFor == 0:
+	case accessKey.IssuedForID == 0:
 		return fmt.Errorf("issuedFor is required")
 	case accessKey.ProviderID == 0:
 		return fmt.Errorf("providerID is required")
@@ -57,17 +55,6 @@ func validateAccessKey(accessKey *models.AccessKey) error {
 }
 
 func CreateAccessKey(db WriteTxn, accessKey *models.AccessKey) (body string, err error) {
-	// check if this is an access key being issued for identity provider scim
-	provider, err := GetProvider(db, GetProviderOptions{ByID: accessKey.IssuedFor})
-	if err != nil && !errors.Is(err, internal.ErrNotFound) {
-		return "", fmt.Errorf("check create scim key: %w", err)
-	}
-	if provider != nil {
-		// set the access key provider to match the provider it was issued for
-		// this is used in key validation to detect keys issued for scim
-		accessKey.ProviderID = provider.ID
-	}
-
 	if accessKey.ProviderID == 0 {
 		accessKey.ProviderID = InfraProvider(db).ID
 	}
@@ -94,17 +81,28 @@ func CreateAccessKey(db WriteTxn, accessKey *models.AccessKey) (body string, err
 		accessKey.ExpiresAt = time.Now().Add(time.Hour * 12).UTC()
 	}
 
-	if accessKey.Name == "" {
-		// set a default name for look-up and CLI usage
-		if accessKey.ID == 0 {
-			accessKey.ID = uid.New()
-		}
-
-		identityIssuedFor, err := GetIdentity(db, GetIdentityOptions{ByID: accessKey.IssuedFor})
+	if accessKey.IssuedForKind == "" {
+		identityIssuedFor, err := GetIdentity(db, GetIdentityOptions{ByID: accessKey.IssuedForID})
 		if err != nil {
 			return "", fmt.Errorf("key name from identity: %w", err)
 		}
 
+		accessKey.IssuedForKind = models.AccessKeyForKindUser
+		if identityIssuedFor.Name == models.InternalInfraConnectorIdentityName {
+			accessKey.IssuedForKind = models.AccessKeyForKindOrganization
+		}
+	}
+
+	if accessKey.Name == "" {
+		identityIssuedFor, err := GetIdentity(db, GetIdentityOptions{ByID: accessKey.IssuedForID})
+		if err != nil {
+			return "", fmt.Errorf("key name from identity: %w", err)
+		}
+
+		// set a default name for look-up and CLI usage
+		if accessKey.ID == 0 {
+			accessKey.ID = uid.New()
+		}
 		accessKey.Name = fmt.Sprintf("%s-%s", identityIssuedFor.Name, accessKey.ID.String())
 	}
 
@@ -146,7 +144,7 @@ func ListAccessKeys(tx ReadTxn, opts ListAccessKeyOptions) ([]models.AccessKey, 
 		query.B(", count(*) OVER()")
 	}
 	query.B("FROM access_keys INNER JOIN identities")
-	query.B("ON access_keys.issued_for = identities.id")
+	query.B("ON access_keys.issued_for_id = identities.id")
 	query.B("WHERE access_keys.deleted_at is null AND identities.deleted_at is null")
 	query.B("AND access_keys.organization_id = ?", tx.OrganizationID())
 
@@ -157,7 +155,7 @@ func ListAccessKeys(tx ReadTxn, opts ListAccessKeyOptions) ([]models.AccessKey, 
 		query.B("AND (inactivity_timeout > ? OR inactivity_timeout = ? OR inactivity_timeout is null)", now, zero)
 	}
 	if opts.ByIssuedForID != 0 {
-		query.B("AND issued_for = ?", opts.ByIssuedForID)
+		query.B("AND issued_for_id = ?", opts.ByIssuedForID)
 	}
 	if opts.ByName != "" {
 		query.B("AND access_keys.name = ?", opts.ByName)
@@ -204,9 +202,9 @@ func GetAccessKeyByKeyID(tx ReadTxn, keyID string) (*models.AccessKey, error) {
 }
 
 type GetAccessKeysOptions struct {
-	ByID      uid.ID
-	ByName    string
-	IssuedFor uid.ID
+	ByID        uid.ID
+	ByName      string
+	IssuedForID uid.ID
 }
 
 // GetAccessKey by any unique field. This must be scoped by organizationID as it's callable by users.
@@ -216,18 +214,18 @@ func GetAccessKey(tx ReadTxn, opts GetAccessKeysOptions) (*models.AccessKey, err
 	query.B(columnsForSelect(accessKey))
 	query.B(", identities.name")
 	query.B("FROM access_keys INNER JOIN identities")
-	query.B("ON access_keys.issued_for = identities.id")
+	query.B("ON access_keys.issued_for_id = identities.id")
 	query.B("WHERE access_keys.deleted_at is null")
 	query.B("AND access_keys.organization_id = ?", tx.OrganizationID())
 
 	switch {
 	case opts.ByID != 0:
 		query.B("AND access_keys.id = ?", opts.ByID)
-	case opts.ByName != "" && opts.IssuedFor != 0:
+	case opts.ByName != "" && opts.IssuedForID != 0:
 		query.B("AND access_keys.name = ?", opts.ByName)
-		query.B("AND access_keys.issued_for = ?", opts.IssuedFor)
+		query.B("AND access_keys.issued_for_id = ?", opts.IssuedForID)
 	default:
-		return nil, fmt.Errorf("either an ID, or name and issued_for are required")
+		return nil, fmt.Errorf("either an ID, or name and issued_for_id are required")
 	}
 
 	fields := append(accessKey.ScanFields(), &accessKey.IssuedForName)
@@ -241,7 +239,7 @@ func GetAccessKey(tx ReadTxn, opts GetAccessKeysOptions) (*models.AccessKey, err
 type DeleteAccessKeysOptions struct {
 	// ByID instructs DeleteAccessKeys to delete the key with this ID.
 	ByID uid.ID
-	// ByIssuedForID instructs DeleteAccessKeys to delete keys issued for this user.
+	// ByIssuedForID instructs DeleteAccessKeys to delete keys issued for this id.
 	ByIssuedForID uid.ID
 	// ByProviderID instructs DeleteAccessKeys to delete keys issued by this
 	// provider.
@@ -260,7 +258,7 @@ func DeleteAccessKeys(tx WriteTxn, opts DeleteAccessKeysOptions) error {
 		query.B("AND id = ?", opts.ByID)
 	}
 	if opts.ByIssuedForID != 0 {
-		query.B("AND issued_for = ?", opts.ByIssuedForID)
+		query.B("AND issued_for_id = ?", opts.ByIssuedForID)
 	}
 	if opts.ByProviderID != 0 {
 		query.B("AND provider_id = ?", opts.ByProviderID)
