# internal/server/signup.go
@@ -321,7 +321,8 @@ func signupUser(c *gin.Context, keyExpiresAt time.Time, user *models.ProviderUse
 
 	// grant the user a session on initial sign-up
 	accessKey := &models.AccessKey{
-		IssuedFor:     identity.ID,
+		IssuedForID:   identity.ID,
+		IssuedForKind: models.AccessKeyForKindUser,
 		IssuedForName: identity.Name,
 		ProviderID:    user.ProviderID,
 		ExpiresAt:     keyExpiresAt,
